--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ img.admin {
     background: #dff0f738;
     padding: 0.3em;
     margin-bottom: 1em;
+    height=10 px
 }
 
 .inner-w3layouts-wrap h2,
@@ -145,7 +146,7 @@ img.admin {
 
 .inner-w3layouts-wrap {
     margin: 0 auto;
-    width: 55%;
+    width: 20%;
     padding-top: 4em;
     text-align: center;
 
@@ -373,7 +374,7 @@ form.contact-form {
 @media(max-width:800px) {
     .inner-w3layouts-wrap {
         margin: 0 auto;
-        width: 90%;
+        width: 80%;
         padding-top: 3em;
         text-align: center;
     }
